--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,4 +1,6 @@
 .header
+  position: absolute
+  background: transparent
   display: flex
   align-items: center
   margin: 0 auto
@@ -13,3 +15,13 @@
     padding: 0
     margin: 0
     margin-left: 100px
+    li
+      button
+        a
+          font-weight: bold
+  &-greetings
+    font-size: 18px  
+    span
+      font-weight: bold
+
+
