--- a/src/components/LinkMenu/LinkMenu.sass
+++ b/src/components/LinkMenu/LinkMenu.sass
@@ -1,4 +1,40 @@
 li
   list-style-type: none
+  border: none
+  outline: none
   a
-    font-size: 18px !important
+    position: relative
+    text-decoration: none
+    font-size: 18px 
+    font-weight: bold
+    color: black
+    padding: 20px
+    cursor: pointer
+    transition: 0.3s
+    border: none
+    outline: none
+    &::after
+      position: absolute
+      content: ''
+      width: 100%
+      height: 1px
+      background-color: black
+      bottom: 0
+      left: 0
+      transform: scale(0)
+      transition: 0.3s
+    &:hover
+      color: black
+      &::after
+         transform: scale(1)
+
+.active-link
+  color: #8f0b0bc9
+  &:hover
+    color: #8f0b0bc9
+    &::after
+      transform: scale(0)
+      
+
+        
+    
