--- a/src/pages/Authorization/Authorization.sass
+++ b/src/pages/Authorization/Authorization.sass
@@ -1,3 +1,10 @@
+.auth
+  height: 100vh
+  background: url('../../assets/auth-bg.jpg') center no-repeat
+  overflow: hidden
+  padding-top: 7%
+  &-title
+    text-align: center
 .form
   display: flex
   flex-direction: column
@@ -6,10 +13,14 @@
   top: 50%
   left: 50%
   transform: translate(-50%, -60%)
+  padding: 25px 35px
+  background-color: rgba(0, 0, 0, 0.6)
+  border-radius: 7px
   label
     font-weight: bold
     margin-bottom: 8px
     font-size: 16px
+    color: white
   &-error
     margin-top: 5px
     margin-bottom: 5px
@@ -21,8 +32,19 @@
   &-link, &-btn
     font-weight: bold
   &-link
-    margin-bottom: 1px
-    font-size: 17px 
+    margin-bottom: 15px
+    font-size: 16px 
+    text-transform: uppercase
+    font-weight: bold
+    color: white 
+    border: none
+    outline: none
+    background: transparent
+    cursor: pointer
+    transition: 0.3s
+    letter-spacing: 1px
+    &:hover
+     letter-spacing: 3px
   &-btn
     text-transform: uppercase
     letter-spacing: 1px   
