--- a/src/pages/Contacts/Contacts.sass
+++ b/src/pages/Contacts/Contacts.sass
@@ -3,6 +3,15 @@
   background: url('../../assets/contacts-bg.jpg') center no-repeat
   padding-top: 10%
   overflow: hidden
+  &-search
+    display: block !important
+    margin-left: auto
+    margin-bottom: 20px
   &-table
     width: 90%
     margin: 0 auto
+    input
+      border: none
+      outline: none
+.ant-input
+  padding: 5px 11px !important      
