--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -8,6 +8,7 @@
   padding-bottom: 25px
   width: 80%
   justify-content: space-between
+  z-index: 1
   ul
     display: flex
     align-items: center
