--- a/src/pages/Authorization/Authorization.sass
+++ b/src/pages/Authorization/Authorization.sass
@@ -1,4 +1,5 @@
 .auth
+  position: relative
   height: 100vh
   background: url('../../assets/auth-bg.jpg') center no-repeat
   overflow: hidden
@@ -7,13 +8,13 @@
     text-align: center
 .form
   display: flex
+  top: 50%
+  left: 50%
   flex-direction: column
   width: 400px
   position: absolute
-  top: 50%
-  left: 50%
   transform: translate(-50%, -60%)
-  padding: 25px 35px
+  padding: 25px 35px 65px
   background-color: rgba(0, 0, 0, 0.6)
   border-radius: 7px
   label
